# serializer version: 1
# name: TestEventsPredicatePushdownTransform.test_events_with_alias_and_session_join
  '''
  
  SELECT e.event AS event, e__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS e LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS e__session ON equals(toUInt128(accurateCastOrNull(e.`$session_id`, %(hogql_val_7)s)), e__session.session_id_v7) 
  WHERE greaterOrEquals(toTimeZone(e.timestamp, %(hogql_val_8)s), %(hogql_val_9)s) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_with_session_join_and_timestamp_filter
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_7)s)), events__session.session_id_v7) 
  WHERE greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_8)s), %(hogql_val_9)s) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_without_join_no_pushdown
  '''
  
  SELECT events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_0)s), %(hogql_val_1)s)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_without_where_no_pushdown
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_0)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_1)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_2)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE equals(raw_sessions.team_id, 420) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_3)s)), events__session.session_id_v7) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_multiple_poe_fields_with_session_join
  '''
  
  SELECT events.event AS event, events.person_id AS id, events.person_properties AS properties, toTimeZone(events.person_created_at, %(hogql_val_9)s) AS created_at 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.person_created_at, %(hogql_val_0)s) AS person_created_at, events.person_id AS person_id, events.person_properties AS person_properties, toTimeZone(events.timestamp, %(hogql_val_1)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_2)s), %(hogql_val_3)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_4)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_5)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_6)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_7)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_8)s)), events__session.session_id_v7) 
  WHERE and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_10)s), %(hogql_val_11)s), ifNull(greater(events__session.`$session_duration`, 0), 0)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_multiple_pushable_predicates
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s), equals(events.event, %(hogql_val_3)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_4)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_5)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_6)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_7)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_8)s)), events__session.session_id_v7) 
  WHERE and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_9)s), %(hogql_val_10)s), equals(events.event, %(hogql_val_11)s)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_poe_created_at_with_session_join
  '''
  
  SELECT events.event AS event, toTimeZone(events.person_created_at, %(hogql_val_9)s) AS created_at 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.person_created_at, %(hogql_val_0)s) AS person_created_at, toTimeZone(events.timestamp, %(hogql_val_1)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_2)s), %(hogql_val_3)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_4)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_5)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_6)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_7)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_8)s)), events__session.session_id_v7) 
  WHERE and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_10)s), %(hogql_val_11)s), ifNull(greater(events__session.`$session_duration`, 0), 0)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_poe_id_with_session_join
  '''
  
  SELECT events.person_id AS id, events__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.person_id AS person_id, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_7)s)), events__session.session_id_v7) 
  WHERE greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_8)s), %(hogql_val_9)s) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_poe_properties_with_session_join
  '''
  
  SELECT events.event AS event, events.person_properties AS properties 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, events.person_properties AS person_properties, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_7)s)), events__session.session_id_v7) 
  WHERE and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_8)s), %(hogql_val_9)s), ifNull(greater(events__session.`$session_duration`, 0), 0)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_pushdown_applied_to_nested_subqueries
  '''
  
  SELECT event AS event, avg(duration) AS `avg(duration)` 
  FROM (
  SELECT events.event AS event, events__session.`$session_duration` AS duration 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greater(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_7)s)), events__session.session_id_v7) 
  WHERE greater(toTimeZone(events.timestamp, %(hogql_val_8)s), %(hogql_val_9)s)) 
  GROUP BY event 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_session_duration_filter_stays_in_outer_where
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_7)s)), events__session.session_id_v7) 
  WHERE and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_8)s), %(hogql_val_9)s), ifNull(greater(events__session.`$session_duration`, 0), 0)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_simple_events_with_person_join
  '''
  
  SELECT events.event AS event, events__person.id AS id 
  FROM (
  SELECT events.distinct_id AS distinct_id, events.event AS event, events.person_id AS person_id, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greater(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS events LEFT OUTER JOIN (
  SELECT tupleElement(argMax(tuple(person_distinct_id_overrides.person_id), person_distinct_id_overrides.version), 1) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 420) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(tupleElement(argMax(tuple(person_distinct_id_overrides.is_deleted), person_distinct_id_overrides.version), 1), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
  SELECT person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, %(hogql_val_3)s)), person.version), 1), plus(now64(6, %(hogql_val_4)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id) 
  WHERE greater(toTimeZone(events.timestamp, %(hogql_val_5)s), %(hogql_val_6)s) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_subquery_with_pushdown
  '''
  
  SELECT event AS event, avg(`$session_duration`) AS `avg($session_duration)` 
  FROM (
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s), or(equals(events.event, %(hogql_val_3)s), equals(events.event, %(hogql_val_4)s)))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_5)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_6)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_7)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_8)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_9)s)), events__session.session_id_v7) 
  WHERE and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_10)s), %(hogql_val_11)s), or(equals(events.event, %(hogql_val_12)s), equals(events.event, %(hogql_val_13)s)))) 
  GROUP BY event 
  LIMIT 50000
  '''
# ---
